# PenguinPlayer

./: .gitignore  gradle.properties  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gme_jni.cpp
app/src/main/java/com/penguin/player/: FileListActivity.kt  GmePlayer.kt  MainActivity.kt  PenguinApp.kt
app/src/main/res/drawable/: bg_album_art.xml  ic_arrow_back.xml  ic_arrow_upward.xml  ic_drag_handle.xml  ic_fast_forward.xml  ic_folder.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_music_note.xml  ic_music_note_small.xml  ic_repeat.xml  ic_repeat_one.xml  ic_rewind.xml  ic_shuffle.xml  ic_skip_next.xml  ic_skip_previous.xml  img_toolbar_penguin_spaced.xml  seekbar_track.xml
app/src/main/res/layout/: activity_file_list.xml  activity_main.xml  item_file.xml  item_folder.xml  item_track.xml
app/src/main/res/layout-sw600dp-land/: activity_main.xml
app/src/main/res/menu/: menu_file_browser.xml  menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
